--- a/home-page/html/about.html
+++ b/home-page/html/about.html
@@ -16,6 +16,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <!-- Shared CSS -->
     <link href="../css/styles.css" rel="stylesheet">
+    <!-- Chat JS -->
+    <script src="../js/chat.js"></script>
     <!-- Page-specific CSS -->
     <style>
         .hero {
@@ -73,6 +75,17 @@
             font-weight: 700;
             text-align: center;
             margin-bottom: 2rem;
+        }
+
+        .section-title::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 60px;
+            height: 3px;
+            background: var(--gold, #F7E6A3);
         }
 
         .about-section {
@@ -145,19 +158,18 @@
             border: 0;
         }
 
-        /* Modal Popup Styles */
         .modal-notification .modal-dialog {
             max-width: 400px;
             position: fixed;
-            right: 20px; /* Đặt modal cách mép phải 20px */
-            top: 20px; /* Đặt modal cách mép trên 20px */
-            margin: 0; /* Bỏ margin mặc định */
+            right: 20px;
+            top: 20px;
+            margin: 0;
         }
 
         .modal-notification .modal-content {
             border-radius: 10px;
-            border: 2px solid #22c55e; /* Màu xanh lá cho viền */
-            background-color: #f0fdf4; /* Màu nền xanh nhạt */
+            border: 2px solid #22c55e;
+            background-color: #f0fdf4;
         }
 
         .modal-notification .modal-body {
@@ -168,7 +180,7 @@
         }
 
         .modal-notification .modal-body a {
-            color: #15803d; /* Màu xanh lá đậm hơn cho liên kết */
+            color: #15803d;
             text-decoration: none;
         }
 
@@ -176,12 +188,191 @@
             text-decoration: underline;
         }
 
-        /* Đảm bảo modal không bị che khuất */
         .modal-notification {
-            z-index: 1055; /* Đặt z-index cao hơn nếu cần */
+            z-index: 1055;
         }
 
-        /* Responsive cho màn hình nhỏ */
+        .chat-container {
+            display: none;
+            position: fixed;
+            bottom: 80px;
+            right: 20px;
+            width: 380px;
+            height: 550px;
+            background: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            display: flex;
+            flex-direction: column;
+            border: 1px solid #e0e0e0;
+            z-index: 1060;
+            transition: transform 0.3s ease, opacity 0.3s ease;
+        }
+
+        .chat-container.show {
+            display: flex;
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        .chat-container.hidden {
+            transform: translateY(20px);
+            opacity: 0;
+        }
+
+        .chat-header {
+            background: #FEA116;
+            color: var(--dark-green);
+            padding: 12px 16px;
+            border-radius: 12px 12px 0 0;
+            font-size: 18px;
+            font-weight: 500;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .chat-header button {
+            background: none;
+            border: none;
+            color: var(--dark-green);
+            font-size: 16px;
+            cursor: pointer;
+        }
+
+        .messages {
+            flex: 1;
+            overflow-y: auto;
+            padding: 16px;
+            background: #f5f5f5;
+            scroll-behavior: smooth;
+        }
+
+        .message {
+            margin-bottom: 12px;
+            padding: 10px 14px;
+            border-radius: 8px;
+            font-size: 15px;
+            line-height: 1.5;
+            position: relative;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .message.user {
+            background: #FEA116;
+            color: var(--dark-green);
+            margin-left: auto;
+            border-bottom-right-radius: 2px;
+        }
+
+        .message.bot {
+            background: #ffffff;
+            border: 1px solid #e0e0e0;
+            margin-right: auto;
+            border-bottom-left-radius: 2px;
+        }
+
+        .message-time {
+            font-size: 12px;
+            color: #666;
+            margin-top: 4px;
+            opacity: 0.7;
+        }
+
+        .bot ul, .bot ol {
+            padding-left: 20px;
+            margin: 8px 0;
+        }
+
+        .bot li {
+            margin-bottom: 6px;
+        }
+
+        .bot strong {
+            color: #FEA116;
+            font-weight: 600;
+        }
+
+        .bot code {
+            background: #f4f4f4;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .bot pre {
+            background: #f4f4f4;
+            padding: 10px;
+            border-radius: 6px;
+            overflow-x: auto;
+        }
+
+        .input-area {
+            display: flex;
+            gap: 8px;
+            padding: 12px;
+            background: #ffffff;
+            border-top: 1px solid #e0e0e0;
+        }
+
+        input[type="text"] {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #e0e0e0;
+            border-radius: 6px;
+            font-size: 15px;
+            outline: none;
+            transition: border-color 0.3s, box-shadow 0.3s;
+        }
+
+        input[type="text"]:focus {
+            border-color: #FEA116;
+            box-shadow: 0 0 0 2px rgba(254, 161, 22, 0.2);
+        }
+
+        button {
+            padding: 10px 16px;
+            border: none;
+            background: #FEA116;
+            color: var(--dark-green);
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 15px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background: #e69114;
+        }
+
+        button.clear-btn {
+            background: #e0e0e0;
+            color: #333;
+        }
+
+        button.clear-btn:hover {
+            background: #d0d0d0;
+        }
+
+        #chat-toggle {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            width: 50px;
+            height: 50px;
+            background: #FEA116;
+            color: var(--dark-green);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 24px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            z-index: 1060;
+        }
+
         @media (max-width: 768px) {
             .hero h1 {
                 font-size: 2rem;
@@ -210,12 +401,29 @@
 
             .modal-notification .modal-dialog {
                 max-width: 90%;
-                right: 10px; /* Giảm khoảng cách mép phải cho màn hình nhỏ */
-                top: 10px; /* Giảm khoảng cách mép trên */
+                right: 10px;
+                top: 10px;
+            }
+
+            .chat-container {
+                width: 90%;
+                height: 70vh;
+                right: 10px;
+                bottom: 70px;
             }
         }
 
-        /* Animations */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(30px);
+            transition: all 0.6s ease;
+        }
+
+        .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
         @keyframes fadeInDown {
             from {
                 opacity: 0;
@@ -236,6 +444,15 @@
                 opacity: 1;
                 transform: translateY(0);
             }
+        }
+
+        .navbar {
+            transition: background-color 0.3s ease, opacity 0.3s ease;
+        }
+
+        .navbar.visible {
+            opacity: 1 !important;
+            visibility: visible !important;
         }
     </style>
 </head>
@@ -277,7 +494,7 @@
                             <ul class="dropdown-menu dropdown-menu-end">
                                 <li><a class="dropdown-item" href="profile.html#profile">Chỉnh Sửa Thông Tin</a></li>
                                 <li><a class="dropdown-item" href="orderHistory.html">Xem Đơn Hàng</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="logout()">Đăng Xuất</a></li>
+                                <li><a class="dropdown-item" href="#" onclick="try { logout(); } catch(e) { console.error('Error logging out:', e); showNotification('Lỗi khi đăng xuất: ' + e.message); }">Đăng Xuất</a></li>
                             </ul>
                         </div>
                     </li>
@@ -304,19 +521,36 @@
         </div>
     </div>
 
+    <!-- Chat Toggle Button -->
+    <div id="chat-toggle" onclick="try { toggleChat(); } catch(e) { console.error('Error toggling chat:', e); showNotification('Lỗi khi mở/đóng chat: ' + e.message); }">💬</div>
+
+    <!-- Chat Window -->
+    <div id="chat-container" class="chat-container">
+        <div class="chat-header">
+            <span>FoodHub Chat</span>
+            <button onclick="try { toggleChat(); } catch(e) { console.error('Error toggling chat:', e); showNotification('Lỗi khi đóng chat: ' + e.message); }">✕</button>
+        </div>
+        <div class="messages" id="messages"></div>
+        <div class="input-area">
+            <input type="text" id="userInput" placeholder="Nhập tin nhắn..." onkeydown="if(event.key === 'Enter') try { sendMessage(); } catch(e) { console.error('Error sending message:', e); showNotification('Lỗi khi gửi tin nhắn: ' + e.message); }" />
+            <button onclick="try { sendMessage(); } catch(e) { console.error('Error sending message:', e); showNotification('Lỗi khi gửi tin nhắn: ' + e.message); }">Gửi</button>
+            <button class="clear-btn" onclick="try { clearChatHistory(); } catch(e) { console.error('Error clearing chat:', e); showNotification('Lỗi khi xóa chat: ' + e.message); }">Xóa</button>
+        </div>
+    </div>
+
     <!-- Phần Giới Thiệu -->
     <section class="hero">
         <div class="container">
-            <h1>Giới thiệu về FoodHub</h1>
-            <p>Khám phá câu chuyện và niềm đam mê ẩm thực của chúng tôi.</p>
+            <h1 class="fade-in">Giới thiệu về FoodHub</h1>
+            <p class="fade-in">Khám phá câu chuyện và niềm đam mê ẩm thực của chúng tôi.</p>
         </div>
     </section>
 
     <!-- Câu Chuyện Của Chúng Tôi -->
     <section class="about-section">
         <div class="container">
-            <h2 class="section-title">Câu Chuyện Của Chúng Tôi</h2>
-            <div class="about-content">
+            <h2 class="section-title fade-in">Câu Chuyện Của Chúng Tôi</h2>
+            <div class="about-content fade-in">
                 <p>FoodHub được thành lập với một sứ mệnh đơn giản: kết nối mọi người qua niềm vui ẩm thực. Được thành lập từ năm 2020, chúng tôi đã phát triển từ một quán ăn nhỏ thành một địa điểm ẩm thực được yêu thích, nổi tiếng với cam kết về chất lượng, sự bền vững và dịch vụ xuất sắc.</p>
                 <p>Các đầu bếp của chúng tôi chế biến từng món ăn với nguyên liệu tươi ngon nhất, được chọn lọc từ các nông trại và nhà cung cấp địa phương. Chúng tôi tin rằng mỗi bữa ăn là một câu chuyện, và chúng tôi luôn cố gắng tạo ra những trải nghiệm đáng nhớ cho thực khách.</p>
             </div>
@@ -326,10 +560,10 @@
     <!-- Đội Ngũ Của Chúng Tôi -->
     <section class="about-section">
         <div class="container">
-            <h2 class="section-title">Gặp Gỡ Đội Ngũ</h2>
+            <h2 class="section-title fade-in">Gặp Gỡ Đội Ngũ</h2>
             <div class="row g-4">
                 <div class="col-md-4">
-                    <div class="team-member">
+                    <div class="team-member fade-in">
                         <img src="https://picsum.photos/150" alt="Thành viên đội ngũ" onerror="this.src='../images/fallback.jpg'">
                         <h5>Nguyễn Văn A</h5>
                         <p>Bếp Trưởng</p>
@@ -337,7 +571,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="team-member">
+                    <div class="team-member fade-in">
                         <img src="https://picsum.photos/150" alt="Thành viên đội ngũ" onerror="this.src='../images/fallback.jpg'">
                         <h5>Trần Thị B</h5>
                         <p>Quản Lý Nhà Hàng</p>
@@ -345,7 +579,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="team-member">
+                    <div class="team-member fade-in">
                         <img src="https://picsum.photos/150" alt="Thành viên đội ngũ" onerror="this.src='../images/fallback.jpg'">
                         <h5>Lê Văn C</h5>
                         <p>Đầu Bếp Bánh</p>
@@ -359,8 +593,8 @@
     <!-- Bản Đồ Vị Trí -->
     <section class="map-section">
         <div class="container">
-            <h2 class="section-title">Địa Chỉ Của Chúng Tôi</h2>
-            <div class="map-container">
+            <h2 class="section-title fade-in">Địa Chỉ Của Chúng Tôi</h2>
+            <div class="map-container fade-in">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3835.863084371478!2d108.25943217485829!3d15.968524865546536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3142116949840599%3A0x365b35580f52e8d5!2zxJDhuqFpIGjhu41jIEZQVCDEkMOgIE7hurVuZw!5e0!3m2!1svi!2s!4v1750065400680!5m2!1svi!2s" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
@@ -387,10 +621,113 @@
     <script src="../js/notification.js"></script>
     <!-- Page-specific JS -->
     <script>
+        // Update cart badge
+        function updateCartBadge() {
+            try {
+                const cart = JSON.parse(localStorage.getItem('cart') || '[]');
+                const totalItems = cart.reduce((sum, item) => sum + (item.quantity || 1), 0);
+                document.getElementById('cart-count').textContent = totalItems;
+            } catch (error) {
+                console.error('Error updating cart badge:', error);
+                document.getElementById('cart-count').textContent = '0';
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi cập nhật giỏ hàng: ' + error.message);
+                }
+            }
+        }
+
+        // Navbar background change on scroll
+        function handleNavbarScroll() {
+            try {
+                const navbar = document.querySelector('.navbar');
+                if (window.scrollY > 50) {
+                    navbar.style.background = '#0F172B';
+                    navbar.classList.add('visible');
+                } else {
+                    navbar.style.background = '#0F172B';
+                    navbar.classList.add('visible');
+                }
+            } catch (error) {
+                console.error('Error in handleNavbarScroll:', error);
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi xử lý thanh điều hướng: ' + error.message);
+                }
+            }
+        }
+
+        // Smooth scrolling for anchor links
+        function handleSmoothScrolling() {
+            try {
+                document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+                    anchor.addEventListener('click', function (e) {
+                        e.preventDefault();
+                        const target = document.querySelector(this.getAttribute('href'));
+                        if (target) {
+                            target.scrollIntoView({
+                                behavior: 'smooth',
+                                block: 'start'
+                            });
+                        }
+                    });
+                });
+            } catch (error) {
+                console.error('Error in handleSmoothScrolling:', error);
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi xử lý cuộn mượt: ' + error.message);
+                }
+            }
+        }
+
+        // Scroll animations
+        function handleScrollAnimations() {
+            try {
+                const elements = document.querySelectorAll('.fade-in');
+                elements.forEach(element => {
+                    const elementTop = element.getBoundingClientRect().top;
+                    const elementVisible = 150;
+                    if (elementTop < window.innerHeight - elementVisible) {
+                        element.classList.add('visible');
+                    }
+                });
+            } catch (error) {
+                console.error('Error in handleScrollAnimations:', error);
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi xử lý hiệu ứng cuộn: ' + error.message);
+                }
+            }
+        }
+
+        // Initialize page
         document.addEventListener('DOMContentLoaded', () => {
-            updateUI();
-            fetchUserOrders().then(() => startPolling());
-            initializeWebSocket();
+            try {
+                if (typeof updateUI === 'function') updateUI();
+                if (typeof fetchUserOrders === 'function' && typeof startPolling === 'function') {
+                    fetchUserOrders().then(() => startPolling());
+                }
+                if (typeof initializeWebSocket === 'function') initializeWebSocket();
+                if (typeof loadChatHistory === 'function') loadChatHistory();
+                const chatToggle = document.getElementById('chat-toggle');
+                if (chatToggle) chatToggle.style.display = 'flex';
+                updateCartBadge();
+                handleNavbarScroll();
+                handleSmoothScrolling();
+                handleScrollAnimations();
+
+                // Add event listeners
+                window.addEventListener('scroll', () => {
+                    handleScrollAnimations();
+                    handleNavbarScroll();
+                });
+                window.addEventListener('load', () => {
+                    handleScrollAnimations();
+                    handleNavbarScroll();
+                });
+            } catch (error) {
+                console.error('Error in DOMContentLoaded:', error);
+                if (typeof showNotification === 'function') {
+                    showNotification('Lỗi khi khởi tạo trang: ' + error.message);
+                }
+            }
         });
     </script>
 </body>
