--- a/home-page/html/orderTrack.html
+++ b/home-page/html/orderTrack.html
@@ -17,15 +17,17 @@
       box-sizing: border-box;
     }
 
+
+
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       background-color: #f8fafc;
-      color: #1e293b;
+      color: #FEA116;
     }
 
     /* Sidebar */
     .sidebar {
-      background-color: #ffffff;
+      background-color: #0F172B;
       border-right: 1px solid #e2e8f0;
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
     }
@@ -40,24 +42,24 @@
       padding: 12px 16px;
       margin: 4px 12px;
       border-radius: 8px;
-      color: #64748b;
+      color: #ffffff;
       text-decoration: none;
       transition: all 0.2s ease;
       font-weight: 500;
     }
 
     .sidebar-link:hover {
-      background-color: #f1f5f9;
+      background-color: #FEA116;
       color: #334155;
     }
 
     .sidebar-link.active {
-      background-color: #3b82f6;
+      background-color: #FEA116;
       color: white;
     }
 
     .sidebar-link.active:hover {
-      background-color: #2563eb;
+      background-color: #FEA116;
     }
 
     .sidebar-link i {
@@ -580,8 +582,8 @@
   <aside class="sidebar w-80 flex flex-col justify-between">
     <div>
       <div class="sidebar-header p-6">
-        <h2 class="text-xl font-semibold text-gray-900">Dashboard</h2>
-        <p id="username-greeting" class="text-sm text-gray-500 mt-1">Welcome, User!</p>
+        <h2 class="text-xl font-semibold">Dashboard</h2>
+        <p id="username-greeting" class="text-sm mt-1">Welcome, User!</p>
       </div>
       <nav class="mt-2 px-3">
         <a href="profile.html" id="profile-link" class="sidebar-link">
